--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 @tailwind utilities;
 
 .add-to-cart {
-  @apply flex items-center gap-2 border border-secondary-300 rounded-full bg-secondary-50 px-4 py-2 absolute left-[50%] translate-x-[-50%] translate-y-[-50%];
+  @apply flex items-center gap-2 border border-secondary-300 rounded-full bg-secondary-50 px-4 py-2 w-36 absolute left-[50%] translate-x-[-50%] translate-y-[-50%] cursor-pointer hover:border-primary-red hover:text-primary-red;
 }
 
 .item {
@@ -18,4 +18,12 @@
 
 .price {
   @apply text-primary-red font-semibold;
+}
+
+.cart-control {
+  @apply flex items-center justify-between bg-primary-red border border-primary-red  rounded-full w-36 py-2 px-2  absolute left-[50%] translate-x-[-50%] translate-y-[-50%];
+}
+
+.item-control {
+  @apply w-4 h-4 p-1 fill-white border border-white rounded-full cursor-pointer hover:fill-primary-red hover:bg-white;
 }
